Enable the ubuntu-sdk-team PPA on Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ compiler:
   - clang
   - gcc
 
-#addons:
-#  apt:
-#    sources:
-#    - ubuntu-sdk-team
+addons:
+  apt:
+    sources:
+    - ubuntu-sdk-team
 
 addons:
   apt:
