--- a/.travis.yml
+++ b/.travis.yml
@@ -14,10 +14,8 @@ addons:
 addons:
   apt:
     packages:
-    - qt5-qmake
     - cppcheck
-    - qtbase5-dev
-    - libqt5xmlpatterns5-dev
+    - qtdeclarative5-dev
 
 before_script:
   - cppcheck --error-exitcode=1 --quiet .
